# bootstack-actions

./: .gitignore  README.md
.github/: CODEOWNERS
.github/workflows/: _charm-release.yaml  _func-juju-env.yaml  _func.yaml  _lint-unit.yaml  _pull-request.yaml  _snap-build.yaml  _snap-release.yaml  charm-pull-request.yaml  charm-release.yaml  func.yaml  issue_to_jira.yaml  lint-unit.yaml  lint_unit.yaml  pull-request.yaml  repo-configuration.yaml  snap-pull-request.yaml  snap-release.yaml  sonar.yaml  test-func-juju-env.yaml  test-func.yaml  test-lint-unit.yaml  test-pull-request.yaml  test-sonar.yaml  test_lint_unit.yaml
repos/: settings.yaml
tests/test_charm_repo/: LICENSE  Makefile  README.md  metadata.yaml  pyproject.toml  tox.ini
tests/test_charm_repo/src/: charm.py
tests/test_charm_repo/tests/functional/: conftest.py  requirements.txt  test_charm.py
tests/test_charm_repo/tests/unit/: test_charm.py
tests/test_charm_repo/tests/unit/report/: coverage.xml
tests/test_snap_repo/: pyproject.toml  setup.cfg  setup.py  test_snap.py  tox.ini
tests/test_snap_repo/snap/: snapcraft.yaml
tests/test_snap_repo/tests/functional/: test_func.py
tests/test_snap_repo/tests/unit/: test_unit.py
tests/test_snap_repo/tests/unit/report/: coverage.xml
