[metadata]
name = test_snap
version = 0.0.1
author = Canonical DevOps Centres
classifiers =
   Development Status :: 2 - Pre-Alpha
   Environment :: Plugins
   Intended Audience :: Developers
   Intended Audience :: System Administrators
   Operating System :: OS Independent
   Topic :: System :: Installation/Setup
   Topic :: Utilities
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3.8

[options]
python_requires = >=3.8
packages = find:

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    test-snap = test_snap:main

[aliases]
test = pytest
